# HackyRacer2018

./: .gitignore  .gitmodules  .style.yapf  .travis.yml  bom.json  bom.md  bom.ods  build_and_test.sh  chassis.FCStd  drivetrain.FCStd  hacky_racer.FCStd  notes.md  readme.md  requirements.txt
accessory_control_firmware/: readme.md
accessory_control_firmware/src/: button.cpp  button.hpp  led.cpp  led.hpp  main.cpp  pins.hpp  pwm_light.cpp  pwm_light.hpp  relay.cpp  relay.hpp
cad/: brake_lever_padding.scad  build_all.sh  frame.scad  motor_mount.scad  motorbike_sprocket_mount.scad  overall_dimensions.scad  rear_axle.scad  seat_guard_braces.scad  speaker_mount.scad  sprocket_guard.scad  wheel.scad
cad/axle_wheel_power_transfer/: assembly.scad  components.scad  readme.md
cad/dashboard/: assembly.scad  common.scad
cad/dashboard_enclosure/: assembly.scad  case_walls.scad  common.scad  config.scad  screen_cutaway.scad
cad/flvss_mount/: bottom.scad  top.scad
cad/moxy_board/: common.scad  moxie_board.scad  number_plate.scad
cad/sprocket_fittings/: motorbike_sprocket_mount.scad
cad/sprockets/: 5_tooth.scad  6_tooth.scad  7_tooth.scad  README.md  RacerSprocket.scad  Sprockets.scad  common_config.scad  readme.md
cad/steering_spacer/: extended.scad  normal.scad  steering_spacer.scad
cad/throttle/: assembly.scad  config.scad  lever.scad  lever_3d.scad  mount.scad
cad/vesc_mount/: assembly.scad  clamp.scad  common.scad  config.scad  plate.scad  plate_3d.scad  vesc.scad
dashboard/enclosure/: assembly.scad  case_display.scad  case_lower.scad  case_upper.scad  common.scad  components.scad
dashboard/firmware/: platformio.ini
dashboard/firmware/tests/: CMakeLists.txt  build.sh  conanfile.txt
dashboard/firmware/tests/cmake/: GoogleTest.cmake  GoogleTest.in
dashboard_firmware/: convert_audio
dashboard_firmware/src/: main.cpp  pin_config.h
dashboard_firmware/tests/: CMakeLists.txt
dashboard_firmware/tests/tests/: numeric_value_test.cpp  value_test.cpp
firmware/accessory_control/: .clang-format  platformio.ini
firmware/dashboard/: platformio.ini
frame/: assembly.scad  build_all.sh  dimensions.scad  global_dimensions.scad  test.sh  wheel.scad
frame/assembly/: __init__.py  assembly.py  brake_disc_mount.py  brake_pedal.py  dimensions.py  drive_sprocket_mount.py  front_wheel.py  front_wheel_bar.py  grand.py  lower_frame.py  motor_mount.py  rear_axle.py  rear_bumper.py  seat_mount.py  test_assembly.py  wheel.py  (+1 more)
frame_old/: dimensions.scad
(+276 files in other folders)
